--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    return output_at(terms[0][0]*x**terms[0][1]-terms[1][0]*[terms][1][1])"
+    "    return output_at(terms[0][0]*x**(terms[0][1]-1)-terms[1][0]*[terms][1][1])"
    ]
   },
   {
